--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 	id 'org.asciidoctor.convert' version '1.5.8'
 	id 'java'
+	id 'com.google.cloud.tools.jib' version '1.6.0'
 }
 
 group = 'com.dmc'
@@ -80,3 +81,23 @@ compileQuerydsl {
 	options.annotationProcessorPath = configurations.querydsl
 }
 //querydsl 추가 끝
+
+
+//jib 추가함
+//레퍼런스: https://medium.com/@gaemi/spring-boot-%EA%B3%BC-docker-with-jib-657d32a6b1f0
+//아직 진행 중.
+jib {
+	from {
+		image = "docker://openjdk:8-jre-alpine" // 로컬환경에 설치되어 있는 도커데몬에서 Base Image 를 가져온다. (지금 상황에서는 굳이 원격에서 가져올 필요가 없으므로...)
+	}
+	to {
+		image = "cimyjh/DMC-cloud"
+		tags = ["${1.1}".toString(), "${1.1}".toString()]
+		credHelper = "pass"
+	}
+	container {
+		mainClass = "com.dmc.oauth2.Oauth2Application"
+		ports = ["8088"]
+		volumes = ["/tmp"]
+	}
+}
