--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ plugins {
 	id 'org.asciidoctor.convert' version '1.5.8'
 	id 'java'
 	id 'com.google.cloud.tools.jib' version '1.6.0'
+
+//	id 'com.palantir.docker' version '0.22.1'
+
 }
 
 group = 'com.dmc'
@@ -24,6 +27,7 @@ repositories {
 
 ext {
 	set('snippetsDir', file("build/generated-snippets"))
+	BUILD_VERSION = new Date().format("yyyyMMddHHmmss") // 빌드한 시간을 Image Tag 로 표시하기 위하여 사용한다.
 }
 
 dependencies {
@@ -83,6 +87,23 @@ compileQuerydsl {
 //querydsl 추가 끝
 
 
+
+//
+//task unpack(type: Copy) {
+//	dependsOn bootJar
+//	from(zipTree(tasks.bootJar.outputs.files.singleFile))
+//	into("build/dependency")
+//}
+//
+//docker {
+//	name "gaemi/jib-example-case2"
+//	tags "${project.version}", "${BUILD_VERSION}"
+//	copySpec.from(tasks.unpack.outputs).into("dependency")
+//	buildArgs(['DEPENDENCY': "dependency"])
+//}
+
+
+
 //jib 추가함
 //레퍼런스: https://medium.com/@gaemi/spring-boot-%EA%B3%BC-docker-with-jib-657d32a6b1f0
 //아직 진행 중.
@@ -91,8 +112,8 @@ jib {
 		image = "docker://openjdk:8-jre-alpine" // 로컬환경에 설치되어 있는 도커데몬에서 Base Image 를 가져온다. (지금 상황에서는 굳이 원격에서 가져올 필요가 없으므로...)
 	}
 	to {
-		image = "cimyjh/DMC-cloud"
-		tags = ["${1.1}".toString(), "${1.1}".toString()]
+		image = "gaemi/jib-example-case3"
+		tags = ["${project.version}".toString(), "${BUILD_VERSION}".toString()]
 		credHelper = "pass"
 	}
 	container {
@@ -101,3 +122,4 @@ jib {
 		volumes = ["/tmp"]
 	}
 }
+
