--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@ plugins {
 	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 	id 'org.asciidoctor.convert' version '1.5.8'
 	id 'java'
-	id 'com.google.cloud.tools.jib' version '1.6.0'
+//	id 'com.google.cloud.tools.jib' version '1.6.0'
 
-//	id 'com.palantir.docker' version '0.22.1'
+	id 'com.palantir.docker' version '0.22.1'
 
 }
 
@@ -86,6 +86,15 @@ compileQuerydsl {
 }
 //querydsl 추가 끝
 
+//작동하는 build
+//dockerfile 같은 디렉토리에 있음
+docker {
+	name "dmc/cloud"
+	tags "${project.version}", "${BUILD_VERSION}"
+	files tasks.bootJar.outputs.files
+	buildArgs(['JAR_FILE': tasks.bootJar.outputs.files.singleFile.name])
+}
+
 
 
 //
@@ -107,19 +116,19 @@ compileQuerydsl {
 //jib 추가함
 //레퍼런스: https://medium.com/@gaemi/spring-boot-%EA%B3%BC-docker-with-jib-657d32a6b1f0
 //아직 진행 중.
-jib {
-	from {
-		image = "docker://openjdk:8-jre-alpine" // 로컬환경에 설치되어 있는 도커데몬에서 Base Image 를 가져온다. (지금 상황에서는 굳이 원격에서 가져올 필요가 없으므로...)
-	}
-	to {
-		image = "gaemi/jib-example-case3"
-		tags = ["${project.version}".toString(), "${BUILD_VERSION}".toString()]
-		credHelper = "pass"
-	}
-	container {
-		mainClass = "com.dmc.oauth2.Oauth2Application"
-		ports = ["8088"]
-		volumes = ["/tmp"]
-	}
-}
+//jib {
+//	from {
+//		image = "docker://openjdk:8-jre-alpine" // 로컬환경에 설치되어 있는 도커데몬에서 Base Image 를 가져온다. (지금 상황에서는 굳이 원격에서 가져올 필요가 없으므로...)
+//	}
+//	to {
+//		image = "dmc/cloud"
+//		tags = ["${project.version}".toString(), "${BUILD_VERSION}".toString()]
+//		credHelper = "pass"
+//	}
+//	container {
+//		mainClass = "com.dmc.oauth2.Oauth2Application"
+//		ports = ["8080"]
+//		volumes = ["/tmp"]
+//	}
+//}
 
